test/fail/par-public.mo
actor {
  public func baz() : async () = (with) async { }
}
